--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "th3",
+  "name": "th4",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "@expo/vector-icons": "12.0.5",
+    "react-native-keyboard-aware-scroll-view": "0.9.5",
+    "@react-native-firebase/app": "13.0.1",
+    "@react-native-firebase/auth": "13.0.1",
+    "formik": "2.2.9",
+    "yup": "0.32.11",
+    "@react-navigation/native": "6.0.6",
+    "react-native-screens": "~3.8.0",
+    "react-native-safe-area-context": "3.3.2",
+    "@react-navigation/stack": "6.0.11",
+    "react-native-gesture-handler": "~1.10.2"
+  }
 }
